--- a/static/test.html
+++ b/static/test.html
@@ -14,21 +14,41 @@ function doesFileExist(urlToFile) {
     } else {
         return true;
         console.log("perfect");
+        location.reload(true);
+
     }
 }
 
-function myfun(){
+function checkAndRefresh(){
         var tfile = 'http://127.0.0.1:8080/static/res20180919150343.htmldone';
         var result = doesFileExist(tfile);
 
         if (result == true) {
                 console.log("yay, file exists!");
+                location.reload(true);
+
             // yay, file exists!
         } else {
                  console.log("file does not exist!");
            // file does not exist!
         }
 }
+function refreshData() {
+    x = 5;  // 5 Seconds
+    console.log("howdy");
+    setTimeout(refreshData, x*1000);
+}
+//   refreshData(); // execute function
+
+function keepchecking() {
+    x = 7;  // 5 Seconds
+    console.log("in keepchecking");
+    setTimeout(checkAndRefresh, x*1000);
+
+
+
+}
+
 
 
 </script>
@@ -40,11 +60,15 @@ function myfun(){
 
 </head>
 
-<body onload="myfun();">
+<body onload="keepchecking();">
 <h4> test</h4>
 <br>
 
+<script>
 
+var x = location.origin;
+document.write(window.location.hostname);
+</script>
 
 
 
