--- a/static/testonly.html
+++ b/static/testonly.html
@@ -4,43 +4,26 @@
 <html lang="en-US">
 
 <head>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+
+   $('#content').load("res.html");
+
+});
+</script>
+
+
 <body>
 
-<div>
+<div id="content"></div>
 
 
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.0/jquery.min.js"></script>
-<script type="jquery">
-
-var auto_refresh = setInterval(
-"$('#thisdiv').load(document.URL +  ' #thisdiv');",99000)
+<!--<object id="mine" width="600" height="400" type="text/html" data="res.html" border="0" >-->
+<!--</object>-->
 
 
-setInterval(
-"$('#thisdiv').load(document.URL +  '#thisdiv');",1000)
-
-
-</script>
-
-<div id="thisdiv">
-
-<object id="mine" width="600" height="400" type="text/html" data="res.html" border="0" >
-</object>
-
-
-
-</div>
-
-
-
-
-<script>
-setTimeout("location.reload(true);",99000);
-
-
-</script>
-</div>
 </body>
 
 
